--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "cy:run:chrome": "cypress run --browser chrome",
+    "cy:run:firefox": "cypress run --browser firefox",
+    "cy:run:electron": "cypress run --browser electron",
     "cy:update-snapshots": "cypress run --env updateSnapshots=true",
     "cy:run-dashboard": "cypress run --record --key 281d42fb-605e-4b72-ae3b-f53d10ad840c"
   },
