--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "description": "Cypress framework and POC project",
   "main": "index.js",
   "scripts": {
+    "clean:reports": "(if exist cypress\\reports (rmdir /Q /S cypress\\reports)) && mkdir cypress\\reports && mkdir cypress\\reports\\mocha  &&  mkdir cypress\\reports\\mochareports",
+    "pretest": "npm run clean:reports",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
+    "scriptsLocal": "cypress run --spec cypress/integration/e2e/**/* --env url=devEnv",
+    "scriptsDev": "cypress run --spec cypress/integration/e2e/**/* --env url=devEnv --record --key 281d42fb-605e-4b72-ae3b-f53d10ad840c",
+    "scriptsTest": "cypress run --spec cypress/integration/e2e/**/* --env url=testEnv --record --key 281d42fb-605e-4b72-ae3b-f53d10ad840c",
     "cy:run:chrome": "cypress run --browser chrome",
     "cy:run:firefox": "cypress run --browser firefox",
     "cy:run:electron": "cypress run --browser electron",
     "cy:update-snapshots": "cypress run --env updateSnapshots=true",
-    "cy:run-dashboard": "cypress run --record --key 281d42fb-605e-4b72-ae3b-f53d10ad840c"
+    "cy:run-dashboard": "cypress run --record --key 281d42fb-605e-4b72-ae3b-f53d10ad840c --spec cypress/integration/e2e/**/* || npm run posttest",
+    "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
+    "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports",
+    "posttest": "npm run combine-reports && npm run generate-report",
+    "qatests": "npm run scriptsTest || npm run posttest",
+    "devtests": "npm run scriptsDev || npm run posttest",
+    "localtests": "npm run scriptsLocal || npm run posttest"
   },
   "repository": {
     "type": "git",
@@ -28,8 +39,14 @@
   },
   "homepage": "https://github.com/amit-inamdar84/Cypress-POC#readme",
   "dependencies": {
-    "cypress": "^7.5.0",
+    "cypress": "^8.3.0",
     "cypress-image-snapshot": "^4.0.1",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "cypress-multi-reporters": "^1.5.0",
+    "mocha": "^9.1.1",
+    "mocha-multi-reporters": "^1.5.1",
+    "mochawesome": "^6.2.2",
+    "mochawesome-merge": "^4.2.0",
+    "mochawesome-report-generator": "^5.2.0"
   }
 }
